got rid of bootstrap

--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 	  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 	  	<!-- BOOTSTRAP -->
-	  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	  	<meta name="viewport" content="width=device-width, initial-scale=1">
-	  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<!--   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	  	<meta name="viewport" content="width=device-width, initial-scale=1"> -->
+	  	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> -->
 	</head>
 
 	<body>
 		<div id="my_header">
-			<h1>Shamille's Amazing App</h1>
+			<h1>Shamille's Amazing Thing</h1>
 			<p>This is a great description of an even greater product.</p>
 			<p>
-				<a href="#" class="btn btn-success">Start here</a>
+				<a href="#site" class="btn">Start here</a>
 			</p>
 		</div>
 
-		<div class="item">
+		<div class="item" id="site">
 			<img src="img/elegant.png" width="75">
 			<h2>Elegant</h2>
 			<p>An elegant, <strong>a super elegant </strong>app</p>
@@ -48,7 +48,7 @@
 	
 		<div id="my_footer">
 	  		<p>This the landing page of an amazing app by ©Shamille</p>
-	  		<ul class="list-inline">
+	  		<ul>
 			  <li><a href="#"><i class="fa fa-youtube"></i></a></li>
 			  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
 			  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
